LRIS-26810 Fix spacing on knowledge base articles

--- a/modules/dxp/apps/osb/osb-customer/osb-customer-knowledge-base-theme/src/css/_custom.scss
+++ b/modules/dxp/apps/osb/osb-customer/osb-customer-knowledge-base-theme/src/css/_custom.scss
@@ -710,6 +710,7 @@ $has-control-menu-top-mobile: 48px;
 	}
 
 	.article-wrapper {
+		margin: 5px 0 5px 30px;
 		word-wrap: break-word;
 
 		a {
